@@ -1,0 +1,56 @@
+header,
+aside,
+footer {
+    background-color: #f8f8f8;
+}
+
+header {
+    color: #ffffff;
+    background-image: -webkit-linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
+    background-image: -o-linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
+    background-image: linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
+    background-repeat: no-repeat;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff54b4eb', endColorstr='#ff1d9ce5', GradientType=0);
+    border-bottom: 1px solid #178acc;
+    filter: none;
+    -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+    background-color: #2fa4e7;
+    border-color: #1995dc;
+}
+
+/**
+ * Borders
+ */
+
+aside {
+    border-right: solid 1px #e5e5e5;
+}
+
+aside .user {
+    border-bottom: solid 1px #e5e5e5;
+}
+
+.chat > div {
+    border-bottom: solid 1px #e5e5e5;
+}
+
+footer {
+    border-top: solid 1px #e5e5e5;
+}
+
+/**
+ * Over colors
+ */
+
+.chat {
+    background-color: #ffffff;
+}
+
+.chat .time {
+    color: #898989;
+}
+
+.name {
+    color: #2fa4e7;
+}
