@@ -1,6 +1,7 @@
 ElfChat 6.0.0 BETA 3, 2014-06-30
 --------------------------------
 - Black theme
+- Cerulean theme
 - Add theme assets
 - Add ignore feature
 - Mobile view on desktop
